--- a/.migration_backup/package.json
+++ b/.migration_backup/package.json
@@ -1,6 +1,15 @@
 {
     "name": "org.biketracking",
     "version": "1.3.0",
+    "nativescript": {
+        "id": "org.biketracking",
+        "tns-android": {
+            "version": "6.5.0"
+        },
+        "tns-ios": {
+            "version": "6.5.0"
+        }
+    },
     "description": "Bike Tracking Application",
     "private": true,
     "license": "SEE LICENSE IN LICENSE",
@@ -9,21 +18,19 @@
         "lint": "tslint \"src/**/*.ts\""
     },
     "dependencies": {
-        "@angular/animations": "~14.2.0",
-        "@angular/common": "~14.2.0",
-        "@angular/compiler": "~14.2.0",
-        "@angular/core": "~14.2.0",
-        "@angular/forms": "~14.2.0",
-        "@angular/platform-browser": "~14.2.0",
-        "@angular/platform-browser-dynamic": "~14.2.0",
-        "@angular/router": "~14.2.0",
-        "@nativescript/angular": "~14.2.0",
-        "@nativescript/core": "~8.4.0",
+        "@angular/animations": "~8.2.0",
+        "@angular/common": "~8.2.0",
+        "@angular/compiler": "~8.2.0",
+        "@angular/core": "~8.2.0",
+        "@angular/forms": "~8.2.0",
+        "@angular/platform-browser": "~8.2.0",
+        "@angular/platform-browser-dynamic": "~8.2.0",
+        "@angular/router": "~8.2.0",
         "@nativescript/schematics": "^1.0.0",
         "@nativescript/theme": "^2.3.4",
-        "@nativescript/unit-test-runner": "~3.0.0",
         "geolib": "^3.3.3",
         "moment": "^2.29.3",
+        "nativescript-angular": "~8.21.0",
         "nativescript-appversion": "^1.4.4",
         "nativescript-bluetooth": "^3.0.0",
         "nativescript-geolocation": "^5.1.0",
@@ -32,31 +39,33 @@
         "nativescript-mapbox": "^5.0.1",
         "nativescript-texttospeech": "^2.0.3",
         "nativescript-ui-chart": "^7.1.1",
+        "nativescript-unit-test-runner": "^0.7.0",
         "reflect-metadata": "~0.1.12",
-        "rxjs": "~7.5.0",
+        "rxjs": "^6.6.7",
         "timeseries-analysis": "^1.0.12",
-        "zone.js": "~0.11.5"
+        "tns-core-modules": "^6.5.27",
+        "zone.js": "~0.9.1"
     },
     "devDependencies": {
-        "@angular/compiler-cli": "~14.2.0",
-        "@nativescript/types": "~8.4.0",
-        "@nativescript/webpack": "~5.0.0",
-        "@ngtools/webpack": "~14.2.0",
-        "@nativescript/android": "~8.4.0",
+        "@angular/compiler-cli": "~8.2.0",
+        "@ngtools/webpack": "~8.2.0",
         "@types/jasmine": "3.5.9",
         "@types/jest": "^25.2.3",
+        "codelyzer": "~4.5.0",
         "gulp": "^4.0.2",
         "gulp-bump": "^3.2.0",
         "gulp-git": "^2.10.1",
-        "karma": "~6.3.4",
-        "karma-jasmine": "~4.0.1",
+        "karma": "5.2.2",
+        "karma-jasmine": "3.1.1",
         "karma-nativescript-launcher": "0.4.0",
+        "karma-webpack": "3.0.5",
         "manifest-android": "^0.1.1",
-        "sass": "~1.49.9",
+        "nativescript-dev-webpack": "~1.5.1",
+        "node-sass": "^4.7.1",
+        "tns-platform-declarations": "^6.5.15",
         "tslint": "~5.19.0",
-        "typescript": "~4.8.4"
+        "typescript": "~3.5.3"
     },
     "gitHead": "2250137db8c1e0bd0eb543e8e4563cb71480c00d",
-    "readme": "Bike Tracking Application",
-    "main": "./src/main.ts"
+    "readme": "Bike Tracking Application"
 }
